...
    <string name="library_folder_sort_mode_name">Name</string>

    <!-- LibraryFolderDialog -->
    <string name="library_folder_dialog_title">Create folder</string>
    <string name="library_folder_dialog_title_edit">Edit folder</string>
    <string name="library_folder_dialog_name_label">Folder name</string>
    <string name="library_folder_dialog_confirm">Create</string>
    <string name="library_folder_dialog_confirm_edit">Edit</string>

    <!-- LibraryItemDialog -->
    <string name="library_item_dialog_title">Add new Item</string>
    <string name="library_item_dialog_title_edit">Edit Item</string>
    <string name="library_item_dialog_name_label">Item name</string>
    <string name="library_item_dialog_folder_selector_label">Folder</string>
    <string name="library_item_dialog_folder_selector_no_folder">No folder</string>
    <string name="library_item_dialog_folder_selector_description">Select folder</string>
    <string name="library_item_dialog_color_selector_description">Color %1$d</string>
    <string name="library_item_dialog_confirm">Create</string>
    <string name="library_item_dialog_confirm_edit">Edit</string>

    <!-- LibraryScreen -->
    <string name="library_screen_fab_description">Add item</string>
    <string name="library_screen_multi_fab_description">Add folder or item</string>
    <string name="library_screen_multi_fab_item_description">Add item</string>
    <string name="library_screen_multi_fab_folder_description">Add folder</string>
    <string name="library_screen_hint">Create library items for any piece, scale or other exercise you want to practice.</string>

    <plurals name="library_screen_deletion_dialog_explanation">
...
