...
 * Copyright (c) 2022, Javier Carbone, author Matthias Emde
 */

package app.musikus.core.presentation.utils

object TestTags {
    const val FOLDER_DIALOG_NAME_INPUT = "FOLDER_DIALOG_NAME_INPUT"
    const val ITEM_DIALOG_NAME_INPUT = "ITEM_DIALOG_NAME_INPUT"
    const val ITEM_DIALOG_FOLDER_SELECTOR_DROPDOWN = "ITEM_DIALOG_FOLDER_SELECTOR_DROPDOWN"
    const val FOLDER_LIST = "FOLDER_LIST"

    const val GOAL_DIALOG_PERIOD_UNIT_SELECTOR_DROPDOWN = "GOAL_DIALOG_PERIOD_UNIT_SELECTOR_DROPDOWN"
    const val GOAL_DIALOG_ITEM_SELECTOR_DROPDOWN = "GOAL_DIALOG_ITEM_SELECTOR_DROPDOWN"
}
...
