...
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        android:transitionName="transition_fab"
        android:contentDescription="@string/new_category_fab" />

    <TextView
        android:id="@+id/libraryHint"
        style="@style/tv_hint_empty_fragment"
        android:text="@string/libraryHint"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

